# helia-edge

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  release-please.yaml  release.yaml
docs/: index.md
docs/css/: custom.css
docs/guides/: custom-model-architecture.ipynb  index.md  model.keras  train-cifar-model.ipynb
docs/usage/: index.md
helia_edge/callbacks/: tqdm_progress_bar.py
helia_edge/converters/: __init__.py
helia_edge/converters/litert/: __init__.py  converter.py
helia_edge/layers/: __init__.py  ema_residual_vector_quantizer.py  gumbel_softmax_bottleneck.py  residual_vector_quantizer.py  vector_quantizer.py
helia_edge/layers/preprocessing/: __init__.py  base_augmentation.py  biquad_filter.py  frequency_mix_style.py  normalization.py
helia_edge/metrics/: __init__.py  confusion_matrix.py  prd.py  snr.py  threshold.py
helia_edge/models/: efficientnet.py  mobileone.py  tcn.py  unet.py  utils.py
helia_edge/trainers/: contrastive.py  gs_autoencoder.py  vq_autoencoder.py
helia_edge/utils/: __init__.py  aws.py  env.py  export.py
scripts/: gen_ref_pages.py
tests/: test_confusion_matrix.py
tests/converters/: test_litert_converter.py
tests/layers/: test_ema_residual_vector_quantizer.py
tests/layers/preprocessing/: test_biquad_filter.py  test_normalization.py
tests/metrics/: test_confusion_matrix.py  test_flops.py  test_fscore.py  test_metric_utils.py  test_prd.py  test_snr.py  test_threshold.py
tests/utils/: test_aws.py
