[project]
name = "helia-edge"
version = "0.6.2"
description = "HeliaEdge is a Keras add-on targeting Ambiq edge AI devices."
authors = [
    {name = "Ambiq AI", email = "support.aitg@ambiq.com"},
]
readme = "README.md"

requires-python = ">=3.12,<3.15"

dependencies = [
    "h5py>=3.12.1",
    "keras>=3.4.0",
    "pydantic>=2.8.1",
    "requests>=2.32.4",
    "tqdm>=4.66.4",
    "tensorflow>=2.18.1",
    "tensorflow-metal>=1.2.0; sys_platform == 'darwin'",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.5.2",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "boto3>=1.35.40",
]

[project.optional-dependencies]
litert = [
    "ai-edge-litert>=2.1.3",
]

[dependency-groups]
dev = [
    "ipython>=8.25.0",
    "ipykernel>=6.29.5",
    "notebook>=7.2.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
    "mkdocs-autorefs>=1.3.0",
    "markdown-include>=0.8.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-jupyter>=0.25.1",
]
ci = [
    "pytest>=8.2.0",
    "ruff>=0.7.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where  = ["."]
include = ["helia_edge", "helia_edge.*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv]
package = true
